mockup project link
Added a project template to index file
Added a link to the mockup-to-article project
Added its screenshot
Deleted .DS_store

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 	<h1>Google Scholarship Projects</h1>
 	<h2>Udacity's Google Challenge Scholarship - Front-End Web Dev Path</h2>
 
+	<div class="project">
+		<hr>
+		<a href="mockup-to-article/index.html">
+			<h3>Mockup to Article</h3>
+			<img src="mockup-to-article/screenshot.gif" alt="project screenshot">
+		</a>
+	</div>
+
 </body>
 </html>
