--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 	<h1>Google Scholarship Projects</h1>
 	<h2>Udacity's Google Challenge Scholarship - Front-End Web Dev Path</h2>
 
+	<!-- +++ PROJECTS +++ -->
+
 	<div class="project">
 		<hr>
 		<a href="mockup-to-article/index.html">
 			<h3>Mockup to Article</h3>
 			<img src="mockup-to-article/screenshot.gif" alt="project screenshot">
+		</a>
+	</div>
+	
+	<div class="project">
+		<hr>
+		<a href="fend-animal-trading-cards-master/card.html">
+			<h3>Animal Trading Card</h3>
+			<img src="fend-animal-trading-cards-master/card-screenshot.PNG" alt="project screenshot">
 		</a>
 	</div>
 
