--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<h3>Mockup to Article</h3>
 			<img src="mockup-to-article/screenshot.gif" alt="project screenshot">
 		</a>
+		<p><a href="https://github.com/Syknapse/Google-Challenge-Scholarship-Front-End-Web-Dev">View GitHub repo</a></p>
 	</div>
 	
 	<div class="project">
@@ -25,6 +26,7 @@
 			<h3>Animal Trading Card</h3>
 			<img src="fend-animal-trading-cards-master/card-screenshot.PNG" alt="project screenshot">
 		</a>
+		<p><a href="https://github.com/Syknapse/Google-Challenge-Scholarship-Front-End-Web-Dev">View GitHub repo</a></p>
 	</div>
 
 </body>
