Add pixel art project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
 	<div class="project">
 		<hr>
+		<a href="https://syknapse.github.io/Pixel-art-maker/">
+			<h3>Pixel Art Maker</h3>
+			<img src="mockup-to-article/screenshot.gif" alt="project screenshot">
+		</a>
+		<p><a href="https://github.com/Syknapse/Pixel-art-maker">View GitHub repo</a></p>
+	</div>
+	
+	<div class="project">
+		<hr>
 		<a href="mockup-to-article/index.html">
 			<h3>Mockup to Article</h3>
 			<img src="mockup-to-article/screenshot.gif" alt="project screenshot">
