Add gif to pixel art project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<hr>
 		<a href="https://syknapse.github.io/Pixel-art-maker/">
 			<h3>Pixel Art Maker</h3>
-			<img src="mockup-to-article/screenshot.gif" alt="project screenshot">
+			<img src="https://user-images.githubusercontent.com/29199184/34966797-c388af26-fa5e-11e7-9262-38dea639aecd.gif">
 		</a>
 		<p><a href="https://github.com/Syknapse/Pixel-art-maker">View GitHub repo</a></p>
 	</div>
